Refactor and modernize HTTP client and utilities
This commit applies consistent formatting, improves code style, and modernizes the HTTP client and related utilities. It also simplifies Brotli dependency handling in CMake, ensures proper public linking, and updates the CMake config for downstream consumers. No functional changes are introduced, but the codebase is now more maintainable and easier to read.

--- a/lib/net/CMakeLists.txt
+++ b/lib/net/CMakeLists.txt
@@ -22,12 +22,12 @@ set(NET_SOURCES
   src/tb/net/http/cookie.cpp
   src/tb/net/http/cookie_jar.cpp
   src/tb/net/http/gzip_decoder.cpp
+  src/tb/net/http/br_decoder.cpp
   src/tb/net/http/mime.cpp
 )
 
 target_sources(tb_net
-  PRIVATE
-    ${NET_SOURCES}
+  PRIVATE ${NET_SOURCES}
   PUBLIC
     FILE_SET HEADERS
       BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include
@@ -46,43 +46,31 @@ find_package(Boost CONFIG REQUIRED COMPONENTS asio beast)
 find_package(OpenSSL REQUIRED)
 find_package(Microsoft.GSL CONFIG REQUIRED)
 find_package(glaze CONFIG REQUIRED)
-
 find_package(ZLIB REQUIRED)
 
-target_link_libraries(
-  tb_net
-  PUBLIC
-    tb_utils
-    Boost::asio
-    Boost::beast
-    OpenSSL::SSL
-    OpenSSL::Crypto
-    glaze::glaze
-    Microsoft.GSL::GSL
-    ZLIB::ZLIB
+target_link_libraries(tb_net PUBLIC
+  tb_utils
+  Boost::asio
+  Boost::beast
+  OpenSSL::SSL
+  OpenSSL::Crypto
+  glaze::glaze
+  Microsoft.GSL::GSL
+  ZLIB::ZLIB
 )
 
-# optional: brotli (br decoder)
-option(TB_NET_WITH_BROTLI "Enable Brotli (br) response decoding when Brotli is available" ON)
-if (TB_NET_WITH_BROTLI)
-  # Try common target names produced by various FindBrotli packages
-  find_package(Brotli QUIET)
-  if (Brotli_FOUND)
-    if (TARGET Brotli::dec)
-      set(_TB_BROTLI_DEC_TARGET Brotli::dec)
-    elseif (TARGET Brotli::brotlidec)
-      set(_TB_BROTLI_DEC_TARGET Brotli::brotlidec)
-    elseif (TARGET brotli::brotlidec)
-      set(_TB_BROTLI_DEC_TARGET brotli::brotlidec)
-    endif()
-  endif()
-
-  if (_TB_BROTLI_DEC_TARGET)
-    target_sources(tb_net PRIVATE src/tb/net/http/br_decoder.cpp)
-    target_link_libraries(tb_net PUBLIC ${_TB_BROTLI_DEC_TARGET})
-    target_compile_definitions(tb_net PUBLIC USE_BROTLI=1)
+find_package(Brotli QUIET)
+if(Brotli_FOUND)
+else()
+  find_package(unofficial-brotli CONFIG REQUIRED)
+  if(TARGET unofficial::brotli::brotlidec AND NOT TARGET Brotli::brotlidec)
+    add_library(Brotli::brotlidec INTERFACE IMPORTED)
+    set_property(TARGET Brotli::brotlidec PROPERTY
+      INTERFACE_LINK_LIBRARIES unofficial::brotli::brotlidec)
   endif()
 endif()
+
+target_link_libraries(tb_net PUBLIC Brotli::brotlidec)
 
 if (WIN32)
   target_link_libraries(tb_net PUBLIC ws2_32)
@@ -90,7 +78,6 @@ endif()
 
 add_library(tb::net ALIAS tb_net)
 
-# ---- install & package ----
 install(
   TARGETS tb_net
   EXPORT tb_netTargets
