--- a/lib/twitch_core/CMakeLists.txt
+++ b/lib/twitch_core/CMakeLists.txt
@@ -8,7 +8,6 @@ add_library(tb_twitch_core STATIC)
 target_sources(
   tb_twitch_core
   PRIVATE
-    src/chat_rate_limiter.cpp
     src/command_dispatcher.cpp
     src/config.cpp
     src/helix_client.cpp
@@ -20,7 +19,6 @@ target_sources(
       FILES
         include/tb/parser/irc_message_parser.hpp
         include/tb/parser/irc_simd_scan.hpp
-        include/tb/twitch/chat_rate_limiter.hpp
         include/tb/twitch/command_dispatcher.hpp
         include/tb/twitch/config.hpp
         include/tb/twitch/helix_client.hpp
@@ -39,6 +37,8 @@ target_compile_features(tb_twitch_core PUBLIC cxx_std_23)
 find_package(tomlplusplus CONFIG REQUIRED)
 find_package(glaze CONFIG REQUIRED)
 find_package(Microsoft.GSL CONFIG REQUIRED)
+find_package(OpenSSL REQUIRED)
+find_package(Boost CONFIG REQUIRED COMPONENTS asio beast)
 
 target_link_libraries(
   tb_twitch_core
@@ -48,7 +48,22 @@ target_link_libraries(
     tomlplusplus::tomlplusplus
     glaze::glaze
     Microsoft.GSL::GSL
+    Boost::asio 
+    Boost::beast 
+    OpenSSL::SSL
+    OpenSSL::Crypto
 )
+target_link_libraries(tb_twitch_core PUBLIC )
+
+# Provide the absolute path to the vendored CA bundle for the library code.
+set(CACERT_PEM "${CMAKE_SOURCE_DIR}/third_party/cacert/cacert.pem")
+if(EXISTS "${CACERT_PEM}")
+  # Use forward slashes so the C string literal is not mangled on Windows
+  file(TO_CMAKE_PATH "${CACERT_PEM}" CACERT_PEM_FSLASH)
+  target_compile_definitions(tb_twitch_core PRIVATE TB_CACERT_PEM_PATH="${CACERT_PEM_FSLASH}")
+else()
+  message(FATAL_ERROR "third_party/cacert/cacert.pem not found. Required for TLS verification.")
+endif()
 
 add_library(tb::twitch_core ALIAS tb_twitch_core)
 
