--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,43 +3,33 @@
 add_executable(TwitchBotApp)
 
 add_library(app_generated INTERFACE)
-target_include_directories(app_generated INTERFACE
-  $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/generated>
-)
+target_include_directories(app_generated INTERFACE $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/generated>)
 
 set(APP_INC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 set(APP_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
-target_sources(TwitchBotApp
-  PRIVATE
-    ${APP_SRC}/main.cpp
-    ${APP_SRC}/integrations.cpp
-    ${APP_SRC}/app_channel_store.cpp
-    ${APP_SRC}/register_integrations.cpp
-    ${APP_SRC}/control_commands.cpp       
-    ${APP_SRC}/channel_store.cpp
-  PUBLIC
-    FILE_SET HEADERS
-    BASE_DIRS
-      ${APP_INC}
-    FILES
-      ${APP_INC}/app/integrations.hpp
-      ${APP_INC}/app/app_channel_store.hpp
-      ${APP_INC}/app/register_integrations.hpp
-      ${APP_INC}/app/control_commands.hpp   
-      ${APP_INC}/app/channel_store.hpp
-)
+target_sources(
+  TwitchBotApp
+  PRIVATE ${APP_SRC}/main.cpp
+          ${APP_SRC}/integrations.cpp
+          ${APP_SRC}/app_channel_store.cpp
+          ${APP_SRC}/register_integrations.cpp
+          ${APP_SRC}/control_commands.cpp
+          ${APP_SRC}/channel_store.cpp
+  PUBLIC FILE_SET
+         HEADERS
+         BASE_DIRS
+         ${APP_INC}
+         FILES
+         ${APP_INC}/app/integrations.hpp
+         ${APP_INC}/app/app_channel_store.hpp
+         ${APP_INC}/app/register_integrations.hpp
+         ${APP_INC}/app/control_commands.hpp
+         ${APP_INC}/app/channel_store.hpp)
 
-target_include_directories(TwitchBotApp
-  PRIVATE
-    ${APP_INC}
-)
+target_include_directories(TwitchBotApp PRIVATE ${APP_INC})
 
-target_link_libraries(TwitchBotApp
-  PRIVATE
-    tb::twitch_core
-    app_generated
-)
+target_link_libraries(TwitchBotApp PRIVATE tb::twitch_core app_generated)
 
 find_package(glaze CONFIG REQUIRED)
 find_package(tomlplusplus CONFIG REQUIRED)
@@ -51,10 +41,10 @@ set(CACERT_PEM "${CMAKE_SOURCE_DIR}/third_party/cacert/cacert.pem")
 if(EXISTS "${CACERT_PEM}")
   message(STATUS "Using vendored cacert.pem: ${CACERT_PEM}")
   target_compile_definitions(TwitchBotApp PRIVATE TB_CACERT_PEM_PATH="${CACERT_PEM}")
-  add_custom_command(TARGET TwitchBotApp POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            "${CACERT_PEM}"
-            "$<TARGET_FILE_DIR:TwitchBotApp>/cacert.pem")
+  add_custom_command(
+    TARGET TwitchBotApp
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CACERT_PEM}" "$<TARGET_FILE_DIR:TwitchBotApp>/cacert.pem")
 else()
   message(WARNING "third_party/cacert/cacert.pem not found. TLS verification will fail.")
 endif()
