--- a/.gitignore
+++ b/.gitignore
@@ -54,9 +54,9 @@ CMakeUserPresets.json
 /vcpkg_installed/
 
 # Externals (third-party libs via git submodules)
-# Ignore everything in external/
- /external/
-
+# Ignore everything in third_party/
+ /third_party/vcpkg/
+    
 # ---------------------------------------------------------------------
 # General
 # ---------------------------------------------------------------------
