--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "external/vcpkg"]
-	path = external/vcpkg
+[submodule "third_party/vcpkg"]
+	path = third_party/vcpkg
 	url = https://github.com/microsoft/vcpkg.git
