--- a/lib/twitch_core/CMakeLists.txt
+++ b/lib/twitch_core/CMakeLists.txt
@@ -10,30 +10,26 @@ set_target_properties(tb_twitch_core PROPERTIES EXPORT_NAME twitch_core)
 
 target_sources(
   tb_twitch_core
-  PRIVATE
-    src/command_dispatcher.cpp
-    src/config.cpp
-    src/helix_client.cpp
-    src/irc_client.cpp
-    src/twitch_bot.cpp
-  PUBLIC
-    FILE_SET HEADERS
-      BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include
-      FILES
-        include/tb/parser/irc_message_parser.hpp
-        include/tb/parser/irc_simd_scan.hpp
-        include/tb/twitch/command_dispatcher.hpp
-        include/tb/twitch/config.hpp
-        include/tb/twitch/helix_client.hpp
-        include/tb/twitch/irc_client.hpp
-        include/tb/twitch/twitch_bot.hpp
-)
+  PRIVATE src/command_dispatcher.cpp
+          src/config.cpp
+          src/helix_client.cpp
+          src/irc_client.cpp
+          src/twitch_bot.cpp
+  PUBLIC FILE_SET
+         HEADERS
+         BASE_DIRS
+         ${CMAKE_CURRENT_SOURCE_DIR}/include
+         FILES
+         include/tb/parser/irc_message_parser.hpp
+         include/tb/parser/irc_simd_scan.hpp
+         include/tb/twitch/command_dispatcher.hpp
+         include/tb/twitch/config.hpp
+         include/tb/twitch/helix_client.hpp
+         include/tb/twitch/irc_client.hpp
+         include/tb/twitch/twitch_bot.hpp)
 
-target_include_directories(tb_twitch_core
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-)
+target_include_directories(tb_twitch_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+                                                 $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 
 target_compile_features(tb_twitch_core PUBLIC cxx_std_23)
 
@@ -42,22 +38,20 @@ find_package(glaze CONFIG REQUIRED)
 find_package(Microsoft.GSL CONFIG REQUIRED)
 find_package(OpenSSL REQUIRED)
 
-find_package(boost_asio   CONFIG REQUIRED)
-find_package(boost_beast  CONFIG REQUIRED)
+find_package(boost_asio CONFIG REQUIRED)
+find_package(boost_beast CONFIG REQUIRED)
 
 target_link_libraries(
   tb_twitch_core
-  PUBLIC
-    tb_net
-    tb_utils
-    tomlplusplus::tomlplusplus
-    glaze::glaze
-    Microsoft.GSL::GSL
-    Boost::asio
-    Boost::beast
-    OpenSSL::SSL
-    OpenSSL::Crypto
-)
+  PUBLIC tb_net
+         tb_utils
+         tomlplusplus::tomlplusplus
+         glaze::glaze
+         Microsoft.GSL::GSL
+         Boost::asio
+         Boost::beast
+         OpenSSL::SSL
+         OpenSSL::Crypto)
 
 set(CACERT_PEM "${CMAKE_SOURCE_DIR}/third_party/cacert/cacert.pem")
 if(NOT EXISTS "${CACERT_PEM}")
@@ -66,19 +60,18 @@ endif()
 
 file(TO_CMAKE_PATH "${CACERT_PEM}" CACERT_PEM_FSLASH)
 
-target_compile_definitions(tb_twitch_core PRIVATE
-  $<BUILD_INTERFACE:TB_CACERT_PEM_PATH="${CACERT_PEM_FSLASH}">
-  $<INSTALL_INTERFACE:TB_CACERT_PEM_PATH="${CMAKE_INSTALL_DATADIR}/twitchbot/cacert.pem">
-)
+target_compile_definitions(
+  tb_twitch_core PRIVATE $<BUILD_INTERFACE:TB_CACERT_PEM_PATH="${CACERT_PEM_FSLASH}">
+                         $<INSTALL_INTERFACE:TB_CACERT_PEM_PATH="${CMAKE_INSTALL_DATADIR}/twitchbot/cacert.pem">)
 
 install(
   TARGETS tb_twitch_core
   EXPORT tb_twitch_coreTargets
-  FILE_SET HEADERS DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+  FILE_SET HEADERS
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-)
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 install(FILES "${CACERT_PEM}" DESTINATION ${CMAKE_INSTALL_DATADIR}/twitchbot)
 
@@ -86,17 +79,13 @@ install(
   EXPORT tb_twitch_coreTargets
   NAMESPACE tb::
   FILE tb_twitch_coreTargets.cmake
-  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/tb_twitch_core
-)
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/tb_twitch_core)
 
 write_basic_package_version_file(
   ${CMAKE_CURRENT_BINARY_DIR}/tb_twitch_coreConfigVersion.cmake
   VERSION ${PROJECT_VERSION}
-  COMPATIBILITY SameMajorVersion
-)
+  COMPATIBILITY SameMajorVersion)
 
-install(FILES
-  ${CMAKE_CURRENT_BINARY_DIR}/tb_twitch_coreConfig.cmake
-  ${CMAKE_CURRENT_BINARY_DIR}/tb_twitch_coreConfigVersion.cmake
-  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/tb_twitch_core
-)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/tb_twitch_coreConfig.cmake
+              ${CMAKE_CURRENT_BINARY_DIR}/tb_twitch_coreConfigVersion.cmake
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/tb_twitch_core)
